--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ html, body {
     box-sizing: border-box;
 }
 
+h1 {
+    margin-top: 30px;
+}
+
 input[type="color"] {
     width: 60px;
     height: 50px;
